// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions Fraction 1`] = `
Array [
  0.42,
  0,
  0.0098,
  0,
  0.42,
  0.15621,
  0,
  0,
  1,
]
`;

exports[`Equation Functions Fraction 2`] = `
Array [
  0.42,
  0,
  0.0098,
  0,
  0.42,
  0.08934,
  0,
  0,
  1,
]
`;

exports[`Equation Functions Fraction 3`] = `
Array [
  0.7,
  0,
  0.0042,
  0,
  0.7,
  -0.0126,
  0,
  0,
  1,
]
`;

exports[`Equation Functions Fraction 4`] = `
Array [
  0.02184,
  0,
  0.00728,
  0,
  0.008,
  0.13386,
  0,
  0,
  1,
]
`;

exports[`Equation Functions Fraction 5`] = `
Array [
  0.0364,
  0,
  0,
  0,
  0.008,
  0.049,
  0,
  0,
  1,
]
`;
